[package]
name = "stellarflow-contracts"
version = "0.1.0"
edition = "2021"
authors = ["StellarFlow Network"]
description = "StellarFlow smart contracts with time-locked upgrade mechanism"

[workspace]
members = [
    "contracts/analytics-engine",
    "contracts/hello-world",
    "contracts/ledger-time-helper",
    "contracts/liquidity-lock",
    "contracts/price-oracle",
    "contracts/reward-splitter",
    "contracts/gas-tank",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
soroban-token-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
